[gd_scene load_steps=2 format=3 uid="uid://ibxfv3i2bone"]

[ext_resource type="Script" uid="uid://dsn2wth71a7es" path="res://addons/RPG_Maker_Database/Editors/Databases/Effects/effect_row.gd" id="1_ed7yq"]

[node name="effect_row" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ed7yq")

[node name="MainOptionButton" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 13
popup/item_0/text = "Recover HP"
popup/item_0/id = 0
popup/item_1/text = "Recover MP"
popup/item_1/id = 1
popup/item_2/text = "Gain TP"
popup/item_2/id = 2
popup/item_3/text = "Add State"
popup/item_3/id = 3
popup/item_4/text = "Remove State"
popup/item_4/id = 4
popup/item_5/text = "Add Buff"
popup/item_5/id = 5
popup/item_6/text = "Add Debuff"
popup/item_6/id = 6
popup/item_7/text = "Remove Buff"
popup/item_7/id = 7
popup/item_8/text = "Remove Debuff"
popup/item_8/id = 8
popup/item_9/text = "Special Effect"
popup/item_9/id = 9
popup/item_10/text = "Grow"
popup/item_10/id = 10
popup/item_11/text = "Learn Skill"
popup/item_11/id = 11
popup/item_12/text = "Common Event"
popup/item_12/id = 12

[node name="StateOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2

[node name="StatOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
item_count = 8
popup/item_0/text = "Max HP"
popup/item_0/id = 0
popup/item_1/text = "Max MP"
popup/item_1/id = 1
popup/item_2/text = "Attack"
popup/item_2/id = 2
popup/item_3/text = "Defense"
popup/item_3/id = 3
popup/item_4/text = "M.Attack"
popup/item_4/id = 4
popup/item_5/text = "M.Defense"
popup/item_5/id = 5
popup/item_6/text = "Agility"
popup/item_6/id = 6
popup/item_7/text = "Luck"
popup/item_7/id = 7

[node name="SpecialOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
item_count = 1
popup/item_0/text = "Escape"
popup/item_0/id = 0

[node name="SkillOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2

[node name="CommonEventOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2

[node name="PercentageSpinBox" type="SpinBox" parent="."]
layout_mode = 2
max_value = 9999.0
suffix = "%"

[node name="AdditiveSpinBox" type="SpinBox" parent="."]
layout_mode = 2
max_value = 9999.0
prefix = "+"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
text = "X"

[connection signal="item_selected" from="MainOptionButton" to="." method="_on_main_option_button_item_selected"]
[connection signal="item_selected" from="StateOptionButton" to="." method="set_argument"]
[connection signal="item_selected" from="StatOptionButton" to="." method="set_argument"]
[connection signal="item_selected" from="SpecialOptionButton" to="." method="set_argument"]
[connection signal="item_selected" from="SkillOptionButton" to="." method="set_argument"]
[connection signal="item_selected" from="CommonEventOptionButton" to="." method="set_argument"]
[connection signal="value_changed" from="PercentageSpinBox" to="." method="_on_percentage_spin_box_value_changed"]
[connection signal="value_changed" from="AdditiveSpinBox" to="." method="_on_additive_spin_box_value_changed"]
[connection signal="button_down" from="DeleteButton" to="." method="_on_delete_button_button_down"]
